--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@
 
 buildscript {
     repositories {
-        google()
+        maven {
+            url "https://maven.google.com"
+        }
         jcenter()
         mavenCentral()
     }
@@ -14,7 +16,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        maven {
+            url "https://maven.google.com"
+        }
         jcenter()
         mavenCentral()
     }
