--- a/submitbutton/build.gradle
+++ b/submitbutton/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'maven-publish'
+apply plugin: 'maven-publish' // ✅ use only this
 
-group = 'me.spark' // Change this to match your package name
-version = '1.0.1' // Change this to match your version number
-
+group = 'com.github.jkrzacz' // ✅ consistent with JitPack coordinates
+version = '1.0.5' // ✅ update to latest version
 
 android {
     compileSdkVersion 23
@@ -14,8 +12,9 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0.1"
+        versionName "1.0.5"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -30,54 +29,27 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
 }
 
-
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier 'sources'
+    classifier = 'sources'
 }
 
 task generateJavadocs(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath()
-            .join(File.pathSeparator))
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
 }
 
-task generateJavadocsJar(type: Jar) {
+task generateJavadocsJar(type: Jar, dependsOn: generateJavadocs) {
     from generateJavadocs.destinationDir
-    classifier 'javadoc'
+    classifier = 'javadoc'
 }
 
 artifacts {
-//    archives generateJavaDocsJar
     archives generateSourcesJar
+    archives generateJavadocsJar
 }
 
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.key")
-    pkg {
-        repo = 'maven'
-        name = 'SubmitButton'
-        desc = "A cool and elegant Submit Button."
-
-        version {
-            name = '1.0.1'
-            desc = 'A cool, practical and elegant Submit Button.'
-            vcsTag = 'Android,Submit,Button,Animator,Animation'
-        }
-
-        licenses = ['MIT']
-        vcsUrl = 'https://github.com/SparkYuan/SubmitButton.git'
-        websiteUrl = 'https://github.com/SparkYuan/SubmitButton'
-
-        labels = ['android']
-        publish = true
-        publicDownloadNumbers = true
-    }
-    configurations = ['archives']
-}
+// ❌ Removed bintray block — deprecated and unnecessary
 
 publishing {
     publications {
@@ -86,7 +58,10 @@ publishing {
 
             groupId = 'com.github.jkrzacz'
             artifactId = 'submitbutton'
-            version = '1.0.4'
+            version = '1.0.5'
+
+            artifact generateSourcesJar
+            artifact generateJavadocsJar
         }
     }
 }
