--- a/submitbutton/build.gradle
+++ b/submitbutton/build.gradle
@@ -5,20 +5,20 @@ group = 'com.github.jkrzacz'
 version = '1.0.5'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 33  // upgrade SDK
+    buildToolsVersion "33.0.0"  // lub najnowsza wersja build tools
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0.5"
     }
-
+    
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -26,7 +26,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:23.4.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.core:core:1.9.0'  // ważne, żeby mieć core AndroidX
 }
 
 task generateSourcesJar(type: Jar) {
